[package]
name = "cmsis-dsp-sys"
version = "0.2.0"
authors = ["Jacob Rosenthal <jacobrosenthal@gmail.com>"]
edition = "2018"
links = "cmsis-dsp"
license-file = "LICENSE.md"
description = "Rust bindings to the static arm cmsis math libraries"
readme = "README.md"
repository = "https://github.com/jacobrosenthal/cmsis-dsp-sys"
categories = ["embedded", "hardware-support", "no-std", "math", "ffi"]
keywords = ["dsp"]

[build-dependencies]
bindgen = "0.54.1"
