[package]
name = "cmsis-dsp-sys"
version = "0.3.0"
authors = ["Jacob Rosenthal <jacobrosenthal@gmail.com>"]
edition = "2018"
links = "cmsis-dsp"
license-file = "LICENSE.md"
description = "Rust bindings to the static arm cmsis math libraries"
readme = "README.md"
repository = "https://github.com/jacobrosenthal/cmsis-dsp-sys"
categories = ["embedded", "hardware-support", "no-std", "math", "ffi"]
keywords = ["dsp"]
resolver = "2"

[dependencies]
cty = "0.2.1"

[build-dependencies]
zip = { version = "0.5.12", default-features = false, features = ["deflate"] }
bindgen = "0.58.1"
reqwest = { version = "0.11.3", default-features = false, features = [
    "blocking",
    "default-tls"
] }
