[package]
name = "cmsis-dsp-sys"
version = "0.3.1"
authors = ["Jacob Rosenthal <jacobrosenthal@gmail.com>"]
edition = "2018"
links = "cmsis-dsp"
license-file = "LICENSE.md"
description = "Rust bindings to the static arm cmsis math libraries"
readme = "README.md"
repository = "https://github.com/jacobrosenthal/cmsis-dsp-sys"
categories = ["embedded", "hardware-support", "no-std", "math", "ffi"]
keywords = ["dsp"]
resolver = "2"

[dependencies]
cty = "0.2.2"

[build-dependencies]
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
bindgen = "0.69.1"
reqwest = { version = "0.11.22", default-features = false, features = [
    "blocking",
    "default-tls"
] }
